--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
